added first media query

--- a/styles.css
+++ b/styles.css
@@ -81,4 +81,18 @@ nav {
     cursor: pointer;
 }
 
+@media (min-width:600px)
+{
+body {background-color: aqua;}
 
+.caption{display: block;}
+
+.card{width: 40%;
+display: inline-block;}
+
+.menu-icon{display:none;}
+
+nav{display:block}
+
+.menu li{display: inline-block}
+}
